--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../image/bgc.jpg");
+    background-image: url("./image/bgc.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 100vh;
